<resources>
    <string name="app_name">Storie</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add Story</string>
    <string name="title_profile">Profile</string>
    <string name="splashscreen">Splash Screen Image</string>
    <string name="ss_app_name">App Name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="switch_camera_icon">Switch Camera Icon</string>
    <string name="take_picture_icon">Take picture icon</string>
    <string name="story_detail_img">Story detail image </string>
    <string name="create_by">Created By</string>
    <string name="story_detail_name">Story detail name</string>
    <string name="date">Date</string>
    <string name="story_caption">Story caption</string>
    <string name="story_detail_caption">Story detail caption</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="login_icon">Login icon</string>
    <string name="app_title_description">Log in to your account and start sharing\nyour exciting experiences with us!</string>
    <string name="enabled_btn_login_text">Login</string>
    <string name="disabled_btn_login_text">You have not completed the data</string>
    <string name="enabled_button_register_text">Register</string>
    <string name="disabled_button_register_text">You have not completed the data</string>
    <string name="already_have_an_account">Already have an account?\n</string>
    <string name="app_title_description_register">Sign up and start sharing your story with us!</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email">Email</string>
    <string name="welcome_img">Welcome image</string>
    <string name="welcome_description">Read and share interesting experiences from Storie. Log in or sign up to start exploring the unique stories of thousands of people!</string>
    <string name="add_story">Add Your Story!</string>
    <string name="banner_description_add_story">Banner text</string>
    <string name="banner_add_story_description">Share \nyour story \nnow and \ninspire everyone!</string>
    <string name="text_pick_or_take_photo">Choose or take interesting photos for your best story!</string>
    <string name="galery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="preview_image">Preview image</string>
    <string name="start_your_story_now">Start telling us your interesting stories!</string>
    <string name="type_here">Tell us about it here</string>
    <string name="username">Username</string>
    <string name="enabled_button_add_story_text">Add story</string>
    <string name="disable_button_add_story_text">Tell us your story first</string>
    <string name="title_welcome_user">Welcome to storie!</string>
    <string name="ready_for_read_story">Ready to read today\'s interesting stories?</string>
    <string name="banner_image_welcome_home">Home banner image</string>
    <string name="banner_description_fragment_home">Stories from many people, see and feel their excitement!</string>
    <string name="new_story_today">Today\'s latest story</string>
    <string name="title_fragment_profile">Your Profile</string>
    <string name="banner_image_profile">Banner Profile Image</string>
    <string name="user_id_title">User ID</string>
    <string name="username_title">Username</string>
    <string name="title_setting">Setting</string>
    <string name="logout_title">LogOut</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="language">Language</string>
    <string name="password_error_length">The password cannot be less than 8 characters</string>
    <string name="confirmation">Confirmation</string>
    <string name="login_succes_dialog">Successfully login!</string>
    <string name="login_error_messege">An error occurs during login</string>
    <string name="login_failed_dialog">Failed login: %1$s</string>
    <string name="photo_picker_title">Photo picker</string>
    <string name="no_photo_selected">There is no photo selected</string>
    <string name="camera_title">Camera</string>
    <string name="failed_take_photo">Failed to take the picture</string>
    <string name="acces_granted">Access granted</string>
    <string name="acces_denied">Access denied</string>
    <string name="add_story_failed_dialog">Errors occur: %1$s</string>
    <string name="pick_or_capture_photo_dialog">Please choose or take pictures first</string>
    <string name="photo_picker_not_available">Photo picker are not available</string>
    <string name="failed_start_camera">Failed to start the camera</string>
    <string name="failed_load_story_detail">Failed to load the story detail</string>
    <string name="failed_load_story">Failed to load stories</string>
    <string name="welcome_user">"Welcome, %1$s"</string>
    <string name="logout_confirmation">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register_succes">Successfully register!</string>
    <string name="register_error">An error occurred during registration</string>
    <string name="register_error_with_error_messege">An error occurred during registration: %1$s</string>
    <string name="no_story_widget">There is no stories</string>
    <string name="story_image_widget">Story image</string>
    <string name="story_description_widget">Story description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="text_location">Location</string>
    <string name="switch_text_location">Show my location</string>
    <string name="btn_text_banner_2_home">Lets find out!</string>
    <string name="image_view_banner_2_home">Home banner image 2</string>
    <string name="description_banner_2_home">Stories from all over Indonesia! Curious about which regions? Find out now!</string>
    <string name="retry_item_story_button_text">Retry</string>
    <string name="item_msg_error_text">Unable to load stories</string>
    <string name="location_permission_denied">Location access permit denied</string>
    <string name="location_not_found">Your location cannot be found</string>
    <string name="no_location_story">There is no location</string>
    <string name="failed_to_get_story_location">Failed to get a story location</string>
    <string name="style_parsing_failed">Style parsing failed</string>
</resources>